# Fast-api-backend

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.codex/skills/auth-jwt-redis-session/: SKILL.md
.codex/skills/auth-jwt-redis-session/agents/: openai.yaml
.codex/skills/auth-jwt-redis-session/references/: auth-flow-and-checks.md
.codex/skills/celery-redis-worker/: SKILL.md
.codex/skills/celery-redis-worker/agents/: openai.yaml
.codex/skills/celery-redis-worker/references/: task-and-scheduling-patterns.md
.codex/skills/commit-message-conventions/: SKILL.md
.codex/skills/fastapi-service-crud/: SKILL.md
.codex/skills/fastapi-service-crud/agents/: openai.yaml
.codex/skills/fastapi-service-crud/references/: router-service-crud-patterns.md
.codex/skills/finetune-instruction-workflows/: SKILL.md
.codex/skills/finetune-instruction-workflows/references/: module-map-and-rules.md
.codex/skills/requirement-to-llm-prompt/: SKILL.md
.codex/skills/requirement-to-llm-prompt/agents/: openai.yaml
.codex/skills/requirement-to-llm-prompt/references/: prompt-templates-and-checklist.md
.codex/skills/security-review-fastapi/: SKILL.md
.codex/skills/security-review-fastapi/agents/: openai.yaml
.codex/skills/security-review-fastapi/references/: review-checklist.md
.codex/skills/sqlmodel-alembic-postgres/: SKILL.md
.codex/skills/sqlmodel-alembic-postgres/agents/: openai.yaml
.codex/skills/sqlmodel-alembic-postgres/references/: model-query-migration-patterns.md
.codex/skills/vlm-evaluation-workflows/: SKILL.md
.codex/skills/vlm-training-workflows/: SKILL.md
app/: __init__.py  backend_pre_start.py  initial_data.py  lifespan.py  main.py  models.py  tests_pre_start.py
app/alembic/: env.py
app/alembic/versions/: 0001_create_users.py  0002_ai_chat_conversations.py  0003_ai_chat_msg_attachments.py
app/api/: deps.py  main.py
app/api/routes/: ai_chat.py  login.py  options.py  test_redis.py  utils.py
app/core/: celery_app.py  config.py  db.py  redis.py  security.py
app/core/consts/: __init__.py  ai_chat.py  auth.py  common.py  redis_keys.py  user.py
app/crud/: __init__.py  ai_chat.py  user.py
app/docs/: swagger.py
app/schemas/: __init__.py  ai_chat.py  common.py  pagination.py  token.py  user.py
app/services/: ai_chat_service.py  auth_service.py  options_service.py
app/tasks/: __init__.py  ai_chat.py  healthcheck.py
app/utils/: logger.py
hooks/: validate_commit_msg.py
requirements/: README.md
scripts/: prestart.sh  start-all.sh
tests/: conftest.py  test_ai_chat_routes.py  test_ai_chat_service.py  test_health.py  test_hello.py
