# pyproject.toml 是 Python 项目的现代化配置文件，它定义了项目的元数据、依赖关系和各种工具的配置。
# 这个文件是 PEP 518 标准引入的，用来替代传统的 setup.py 和 requirements.txt 文件。
[project]
name = "test-fast-api"
version = "0.1.0"
description = ""
requires-python = ">=3.10,<4.0"
# 这是项目运行时需要安装的包
dependencies = [
    "fastapi[standard]<1.0.0,>=0.114.2",
    "python-multipart<1.0.0,>=0.0.7",
    "email-validator<3.0.0.0,>=2.1.0.post1",
    "passlib[bcrypt]<2.0.0,>=1.7.4",
    "tenacity<9.0.0,>=8.2.3",
    "pydantic>2.0",
    # "emails<1.0,>=0.6",  # SMTP邮件发送已移除
    # "jinja2<4.0.0,>=3.1.4",  # 邮件模板渲染已移除
    "alembic<2.0.0,>=1.12.1",
    "httpx<1.0.0,>=0.25.1",
    "psycopg[binary]<4.0.0,>=3.1.13",
    "sqlalchemy>=2.0,<3.0",
    "sqlmodel<1.0.0,>=0.0.21",
    # Pin bcrypt until passlib supports the latest
    "bcrypt==4.3.0",
    "pydantic-settings<3.0.0,>=2.2.1",
    "sentry-sdk[fastapi]<2.0.0,>=1.40.6",
    "pyjwt<3.0.0,>=2.8.0",
    "redis>=5.0.0,<7.0.0",
    "aiofiles>=25.1.0",
    "pillow>=12.1.0",
    "click>=8.1.0",
    "loguru>=0.7.0",
    "celery[redis]>=5.4.0,<6.0.0",
    "flower>=2.0.0,<3.0.0",
    "pypdf>=5.0.0,<7.0.0",
]

# 这是 uv 工具的开发环境依赖配置
[dependency-groups]
dev = [
    "pytest<8.0.0,>=7.4.3",
    "mypy<2.0.0,>=1.8.0",
    "ruff<1.0.0,>=0.2.2",
    "prek>=0.2.24,<1.0.0",
    "pre-commit==4.5.1",
    "types-passlib<2.0.0.0,>=1.7.7.20240106",
    "coverage<8.0.0,>=7.4.3",
    # Python < 3.11 时用于 check-toml
    "tomli>=2.0.1; python_version < '3.11'",
    "types-aiofiles>=25.1.0.20251011",
]

# 使用 hatchling 作为构建后端（即构建工具），这也是 hatch 提供的现代 Python 构建工具。
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# 表示使用严格类型检查，同时忽略虚拟环境和 Alembic 的迁移脚本
[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]

[[tool.mypy.overrides]]
module = ["celery", "celery.*"]
ignore_missing_imports = true
follow_untyped_imports = true

[[tool.mypy.overrides]]
module = ["app.core.celery_app", "app.tasks.*"]
disallow_untyped_calls = false
disallow_untyped_decorators = false

# Ruff 代码检查和格式化工具配置
[tool.ruff]
target-version = "py310"
# 配置目标 Python 版本和排除的目录
exclude = ["alembic", ".codex"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
    "T201",   # print statements are not allowed
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
